--- a/data/ephemerides.toml
+++ b/data/ephemerides.toml
@@ -90,7 +90,7 @@ tag = ["vacances"]
 
 [[trimestre.ephemeride]]
 title = "Congé de l'Armistice"
-date = "vendredi 11 novembre 2023"
+date = "samedi 11 novembre 2023"
 godate = "2023-11-11"
 tag = ["vacances"]
 
