--- a/content/infos/fournitures/maffle.toml
+++ b/content/infos/fournitures/maffle.toml
@@ -1,5 +1,5 @@
 [[document]]
-name = "acceuil et maternelle"
+name = "accueil et maternelle"
 location = "docs/mat_maffle.pdf"
 [[document]]
 name = "3ème Primaire"
