--- a/data/ephemerides.toml
+++ b/data/ephemerides.toml
@@ -3,145 +3,192 @@ title = "1er trimestre"
 
 [[trimestre.ephemeride]]
 title = "Conférence pédagogique"
-date = "lundi 28 aout 2023"
-godate = "2023-08-28"
+date = "lundi 26 aout 2024"
+godate = "2024-08-26"
 tag = ["école"]
 
 [[trimestre.ephemeride]]
 title = "Réunion des parents (Maffle)"
-date = "jeudi 31 aout 2023"
+date = "jeudi 29 août 2024"
 note = "accueil des MA 1 à P4 à 18h et des P5-P6 à 18h30 dans la cour suivi d'une réunion en classe"
-godate = "2023-08-31"
+godate = "2024-08-29"
 site = ["maffle"]
 
 [[trimestre.ephemeride]]
 title = "Réunion des parents (Ath)"
-date = "vendredi 01 septembre 2023"
+date = "jeudi 29 août 2024"
 note = "accueil des MA 1 à P4 à 18h et des P5-P6 à 18h30 dans la cour suivi d'une réunion en classe"
-godate = "2023-09-01"
+godate = "2024-08-29"
 site = ["ath"]
 
 [[trimestre.ephemeride]]
-title = "Conférence pédagogique"
-date = "mardi 12 septembre 2023"
-godate = "2023-09-12"
-tag = ["école"]
+title = "24h Cross interscolaire"
+date  = "samedi 21 septembre 2024"
+note = "enseignants et parents"
+godate = "2024-09-21"
+tag = ["sport", "loisir"]
 
 [[trimestre.ephemeride]]
-title = "24h Cross interscolaire"
-date  = "samedi 16 septembre 2023"
-note = "enseignants et parents"
-godate = "2023-09-16"
+title = "Karaté"
+date  = "jeudi 05 septembre 2024"
+godate = "2024-09-05"
+tag = ["sport", "loisir"]
+
+[[trimestre.ephemeride]]
+title = "Karaté"
+date  = "mardi 10 septembre 2024"
+godate = "2024-09-10"
+tag = ["sport", "loisir"]
+
+[[trimestre.ephemeride]]
+title = "Karaté"
+date  = "jeudi 12 septembre 2024"
+godate = "2024-09-12"
+tag = ["sport", "loisir"]
+
+[[trimestre.ephemeride]]
+title = "Karaté"
+date  = "mardi 17 septembre 2024"
+godate = "2024-09-17"
+tag = ["sport", "loisir"]
+
+[[trimestre.ephemeride]]
+title = "Karaté"
+date  = "jeudi 19 septembre 2024"
+godate = "2024-09-19"
 tag = ["sport", "loisir"]
 
 [[trimestre.ephemeride]]
 title = "24h Cross interscolaire"
-date  = "dimanche 17 septembre 2023"
+date  = "dimanche 22 septembre 2024"
 note = "élèves"
-godate = "2023-09-17"
+godate = "2024-09-22"
+tag = ["sport", "loisir"]
+
+[[trimestre.ephemeride]]
+title = "Tournoi mini-foot"
+date  = "jeudi 26 septembre 2024"
+godate = "2024-09-26"
 tag = ["sport", "loisir"]
 
 [[trimestre.ephemeride]]
 title = "Congé - Fête de la FWB"
-date = "mercredi 27 septembre 2023"
-godate = "2023-09-27"
+date = "vendredi 27 septembre 2024"
+godate = "2024-09-27"
 tag = ["école", "vacances"]
 
 [[trimestre.ephemeride]]
 title = "début des activités extrascolaire"
-date = "lundi 02 octobre 2023"
-godate = "2023-10-02"
+date = "mardi 01 octobre 2024"
+godate = "2024-10-01"
 tag = ["école", "loisirs"]
 
 [[trimestre.ephemeride]]
+title = "messe de rentrée"
+date = "mecredi 02 octobre 2024"
+godate = "2024-10-02"
+tag = ["école"]
+
+[[trimestre.ephemeride]]
 title = "initiation au rugby"
-date = "mardi 03 octobre 2023"
+date = "jeudi 03 octobre 2024"
 note = "P5/P6 Ath"
-godate = "2023-10-03"
+godate = "2024-10-03"
 tag = ["sport"]
 class = ["P5", "P6"]
 site = ["ath"]
 
 [[trimestre.ephemeride]]
-title = "messe de rentrée"
-date = "mecredi 04 octobre 2023"
-godate = "2023-10-04"
-tag = ["école"]
-
-[[trimestre.ephemeride]]
-title = "JCPF"
-date = "vendredi 20 octobre 2023"
-note = "P3 à P6 Ath, Maffle"
-godate = "2023-10-20"
-class = ["P3", "P4", "P5", "P6"]
+title = "initiation au rugby"
+date = "mercredi 10 octobre 2024"
+note = "P5/P6 Ath"
+godate = "2024-10-10"
+tag = ["sport"]
+class = ["P5", "P6"]
+site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "Animation Halloween"
-date = "vendredi 20 octobre 2023"
+date = "vendredi 18 octobre 2024"
 note = "organisé par l'association des parents"
-godate = "2023-10-20"
+godate = "2024-10-18"
 tag = ["loisir"]
 
 [[trimestre.ephemeride]]
 title = "Congé de Toussaint/d'automne"
-date = "du lundi 24 octobre 2023 au vendredi 04 novembre 2023"
-godate = "2023-10-24"
+date = "du lundi 21 octobre 2024 au vendredi 01 novembre 2024"
+godate = "2024-10-21"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
 title = "Congé de l'Armistice"
-date = "samedi 11 novembre 2023"
-godate = "2023-11-11"
+date = "lundi 11 novembre 2024"
+godate = "2024-11-11"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
+title = "tournoi de basket"
+date = "vendredi 15 novembre 2024"
+note = "P3 à P6 Ath et Maffle"
+godate = "2024-11-15"
+tag = ["sport"]
+class = ["P3", "P4", "P5", "P6"]
+
+[[trimestre.ephemeride]]
 title = "Bulletin 1 + Réunion individuelle des parents"
-date = "du lundi 20 novembre au vendredi 24 novembre 2023"
-godate = "2023-11-20"
+date = "du lundi 18 novembre au vendredi 22 novembre 2024"
+godate = "2024-11-18"
 tag = ["école"]
 
 [[trimestre.ephemeride]]
-title = "tournoi de basket"
-date = "vendredi 24 novembre 2023"
-note = "P5, P6 Ath et Maffle"
-godate = "2023-11-24"
+title = "tournoi de netball"
+date = "vendredi 29 novembre 2024"
+note = "P4 à P6 Ath et Maffle"
+godate = "2024-11-29"
 tag = ["sport"]
-class = ["P5", "P6"]
+class = ["P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "Visite de Saint-Nicolas"
-date = "mardi 05 décembre 2023"
+date = "mardi 03 décembre 2024"
 note = "Ath"
-godate = "2023-12-05"
+godate = "2024-12-03"
 site = ["ath"]
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
+title = "initiation au judo"
+date = "mardi 03 décembre 2024"
+godate = "2024-12-03"
+tag = ["sport"]
+class = ["P1", "P2", "P3", "P4", "P5", "P6"]
+
+[[trimestre.ephemeride]]
 title = "Visite de Saint-Nicolas"
-date = "mecredi 06 décembre 2023"
+date = "mecredi 04 décembre 2024"
 note = "Maffle"
-godate = "2023-12-06"
+godate = "2024-12-04"
 site = ["maffle"]
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "Marché de Noël"
-date = "vendredi 15 décembre 2023"
-godate = "2023-12-15"
+date = "vendredi 13 décembre 2024"
+godate = "2024-12-13"
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "championnat interclasse natation"
-date = "vendredi 22 décembre 2023"
+date = "vendredi 20 décembre 2024"
 note = "P5, P6 Ath et Maffle"
-godate = "2023-12-22"
+godate = "2024-12-20"
 tag = ["sport"]
 class = ["P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "Congés de Noël/Hiver"
-date = "du lundi 23 décembre 2023 au vendredi 05 janvier 2024"
-godate = "2023-12-23"
+date = "du lundi 23 décembre 2024 au vendredi 03 janvier 2025"
+godate = "2024-12-23"
 tag = ["vacances"]
 
 [[trimestre]]
@@ -149,16 +196,16 @@ title = "2ème trimestre"
 
 [[trimestre.ephemeride]]
 title = "Classe de neige P6"
-date = "du lundi 08 janvier 2024 au mecredi 17 janvier 2024"
-godate = "2024-01-08"
+date = "du lundi 08 janvier 2025 au mecredi 17 janvier 2025"
+godate = "2025-01-08"
 tag = ["loisir"]
 class = ["P6"]
 
 [[trimestre.ephemeride]]
 title = "initiation au golf"
-date = "du lundi 08 janvier 2024 au mecredi 17 janvier 2024"
+date = "du lundi 08 janvier 2025 au mecredi 17 janvier 2025"
 note = "P1 à P5 Ath et Maffle"
-godate = "2024-01-08"
+godate = "2025-01-08"
 tag = ["sport"]
 class = ["P1", "P2", "P3", "P4", "P5"]
 
@@ -166,7 +213,7 @@ class = ["P1", "P2", "P3", "P4", "P5"]
 title = "initiation au tennis"
 date = "mardi 23 janvier"
 note = "P2/P3/P5 Ath"
-godate = "2024-01-23"
+godate = "2025-01-23"
 tag = ["sport"]
 class = ["P2", "P3", "P5"]
 site = ["ath"]
@@ -175,7 +222,7 @@ site = ["ath"]
 title = "initiation au tennis"
 date = "mardi 30 janvier"
 note = "P1/P4/P6 Ath"
-godate = "2024-01-30"
+godate = "2025-01-30"
 tag = ["sport"]
 class = ["P1", "P4", "P6"]
 site = ["ath"]
@@ -184,7 +231,7 @@ site = ["ath"]
 title = "initiation au tennis"
 date = "mardi 02 février"
 note = "Maffle"
-godate = "2024-02-02"
+godate = "2025-02-02"
 tag = ["sport"]
 site = ["maffle"]
 
@@ -192,96 +239,96 @@ site = ["maffle"]
 title = "tournoi de foot interclasse"
 date = "vendredi 23 février"
 note = "P1 à P6 Ath et Maffle"
-godate = "2024-02-23"
+godate = "2025-02-23"
 tag = ["sport"]
 class = ["P1", "P2", "P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "Carnaval dans la ville"
-date = "vendredi 23 février 2024"
+date = "vendredi 23 février 2025"
 note = "avec l'aide de l'association des parents"
-godate = "2024-02-23"
+godate = "2025-02-23"
 tag = ["loisir"]
 
 [[trimestre.ephemeride]]
 title = "Congé de Carnaval/Détente"
-date = "du lundi 26 février au vendredi 08 mars 2024"
-godate = "2024-02-26"
+date = "du lundi 26 février au vendredi 08 mars 2025"
+godate = "2025-02-26"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
 title = "classe verte P2"
-date = "du lundi 11 mars au vendredi 15 mars 2024"
-godate = "2024-03-11"
+date = "du lundi 11 mars au vendredi 15 mars 2025"
+godate = "2025-03-11"
 tag = ["loisir"]
 class = ["P2"]
 
 [[trimestre.ephemeride]]
 title = "Cross"
-date = "mardi 19 mars 2024"
+date = "mardi 19 mars 2025"
 note = "P1 à P6 Ath et Maffle"
-godate = "2024-03-19"
+godate = "2025-03-19"
 tag = ["sport"]
 class = ["P1", "P2", "P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "Messe et célébration de Saint-Joseph"
-date = "mardi 19 mars 2024"
-godate = "2024-03-19"
+date = "mardi 19 mars 2025"
+godate = "2025-03-19"
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "Bulletin 2 + Réunion individuelle"
-date = "du lundi 18 mars au vendredi 22 mars 2024"
-godate = "2024-03-18"
+date = "du lundi 18 mars au vendredi 22 mars 2025"
+godate = "2025-03-18"
 
 [[trimestre.ephemeride]]
 title = "photo individuelle et de classe Ath"
-date = "lundi 25 mars 2024"
-godate = "2024-03-25"
+date = "lundi 25 mars 2025"
+godate = "2025-03-25"
 site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "photo individuelle et de classe Maffle"
-date = "mercredi 27 mars 2024"
-godate = "2024-03-27"
+date = "mercredi 27 mars 2025"
+godate = "2025-03-27"
 site = ["maffle"]
 
 [[trimestre.ephemeride]]
 title = "souper savoyard"
-date = "samedi 30 mars 2024"
-godate = "2024-03-30"
+date = "samedi 30 mars 2025"
+godate = "2025-03-30"
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "lundi de Pâques"
-date = "lundi 01 avril 2024"
-godate = "2024-04-01"
+date = "lundi 01 avril 2025"
+godate = "2025-04-01"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
 title = "conférence pédagogique"
-date = "lundi 08 avril 2024"
-godate = "2024-04-08"
+date = "lundi 08 avril 2025"
+godate = "2025-04-08"
 tag = ["école"]
 
 [[trimestre.ephemeride]]
 title = "marche gourmande"
-date = "dimanche 21 avril 2024"
-godate = "2024-04-21"
+date = "dimanche 21 avril 2025"
+godate = "2025-04-21"
 tag = ["loisir"]
 
 [[trimestre.ephemeride]]
 title = "journée sportive"
-date = "vendredi 26 avril 2024"
+date = "vendredi 26 avril 2025"
 note = "M1 à P6 Ath et Maffle"
-godate = "2024-04-26"
+godate = "2025-04-26"
 tag = ["sport"]
 
 [[trimestre.ephemeride]]
 title = "Congés de Pâques/Printemps"
-date = "du lundi 29 avril 2024 au vendredi 10 mai 2024"
-godate = "2024-04-29"
+date = "du lundi 29 avril 2025 au vendredi 10 mai 2025"
+godate = "2025-04-29"
 tag = ["vacances"]
 
 [[trimestre]]
@@ -289,116 +336,116 @@ title = "3ème trimestre"
 
 [[trimestre.ephemeride]]
 title = "lundi de pentecôte"
-date = "lundi 20 mai 2024"
-godate = "2024-05-20"
+date = "lundi 20 mai 2025"
+godate = "2025-05-20"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
 title = "initiation au hockey"
-date = "mardi 21 mai 2024"
+date = "mardi 21 mai 2025"
 note = "P3 à P6 Ath"
-godate = "2024-05-21"
+godate = "2025-05-21"
 tag = ["sport"]
 site = ["ath"]
 class = ["P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "classe verte M3"
-date = "du mecredi 22 mai au vendredi 24 mai 2024"
-godate = "2024-05-22"
+date = "du mecredi 22 mai au vendredi 24 mai 2025"
+godate = "2025-05-22"
 tag = ["loisir"]
 class = ["P3"]
 
 [[trimestre.ephemeride]]
 title = "initiation au hockey"
-date = "vendredi 24 mai 2024"
+date = "vendredi 24 mai 2025"
 note = "P3 à P6 Maffle"
-godate = "2024-05-24"
+godate = "2025-05-24"
 tag = ["sport"]
 site = ["maffle"]
 class = ["P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "fin des activités extrascolaires"
-date = "vendredi 31 mai 2024"
-godate = "2024-05-31"
+date = "vendredi 31 mai 2025"
+godate = "2025-05-31"
 
 [[trimestre.ephemeride]]
 title = "Fête scolaire"
 note  = "Ath"
-date = "samedi 01 juin 2024"
-godate = "2024-06-01"
+date = "samedi 01 juin 2025"
+godate = "2025-06-01"
 tag = ["évenement"]
 site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "matinée athlétisme"
 note  = "P3 à P6 Ath et Maffle"
-date = "jeudi 06 juin 2024"
-godate = "2024-06-06"
+date = "jeudi 06 juin 2025"
+godate = "2025-06-06"
 tag = ["sport"]
 class = ["P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "Fête scolaire"
 note  = "Maffle"
-date = "samedi 08 juin 2024"
-godate = "2024-06-08"
+date = "samedi 08 juin 2025"
+godate = "2025-06-08"
 site = ["maffle"]
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "Bulletins intermédiaire pour P2, p4, P6"
 note = "rdv sur convocation"
-date = "du lundi 17 juin au vendredi 21 juin 2024"
-godate = "2024-06-17"
+date = "du lundi 17 juin au vendredi 21 juin 2025"
+godate = "2025-06-17"
 
 [[trimestre.ephemeride]]
 title = "initiation au golf"
 note  = "P3 à P6 Ath et Maffle"
-date = "mardi 18 juin 2024"
-godate = "2024-06-18"
+date = "mardi 18 juin 2025"
+godate = "2025-06-18"
 tag = ["sport"]
 class = ["P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "fin des repas chaud"
-date = "vendredi 21 juin 2024"
-godate = "2024-06-21"
+date = "vendredi 21 juin 2025"
+godate = "2025-06-21"
 
 [[trimestre.ephemeride]]
 title = "épreuves certificatives interdiocésaines pour P2/P4"
-date = "du lundi 24 juin au vendredi 28 juin 2024"
-godate = "2024-06-24"
+date = "du lundi 24 juin au vendredi 28 juin 2025"
+godate = "2025-06-24"
 
 [[trimestre.ephemeride]]
 title = "Epreuves du CEB"
-date = "du lundi 24 juin au vendredi 28 juin 2024"
-godate = "2024-06-24"
+date = "du lundi 24 juin au vendredi 28 juin 2025"
+godate = "2025-06-24"
 
 [[trimestre.ephemeride]]
 title = "remise des dîplomes 3eme maternelles"
-date = "vendredi 28 juin 2024"
+date = "vendredi 28 juin 2025"
 note = "à partir de 18h"
-godate = "2024-06-28"
+godate = "2025-06-28"
 tag = ["évenement"]
 site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "Bulletin 3"
 note = "réunion individuelle sur rdv"
-date = "du lundi 01 juillet au vendredi 05 juillet 2024"
-godate = "2024-07-01"
+date = "du lundi 01 juillet au vendredi 05 juillet 2025"
+godate = "2025-07-01"
 
 [[trimestre.ephemeride]]
 title = "Remise des CEB"
 note = "à 18h"
-date = "mecredi 03 juillet 2024"
-godate = "2024-07-03"
+date = "mecredi 03 juillet 2025"
+godate = "2025-07-03"
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "vacances d'été"
-date = "samedi 06 juillet 2024"
-godate = "2024-07-06"
+date = "samedi 06 juillet 2025"
+godate = "2025-07-06"
 tag = ["vacances"]
