--- a/data/ephemerides.toml
+++ b/data/ephemerides.toml
@@ -196,76 +196,75 @@ title = "2ème trimestre"
 
 [[trimestre.ephemeride]]
 title = "Classe de neige P6"
-date = "du lundi 08 janvier 2025 au mecredi 17 janvier 2025"
-godate = "2025-01-08"
+date = "du lundi 06 janvier 2025 au mecredi 15 janvier 2025"
+godate = "2025-01-06"
 tag = ["loisir"]
 class = ["P6"]
 
 [[trimestre.ephemeride]]
-title = "initiation au golf"
-date = "du lundi 08 janvier 2025 au mecredi 17 janvier 2025"
-note = "P1 à P5 Ath et Maffle"
-godate = "2025-01-08"
-tag = ["sport"]
-class = ["P1", "P2", "P3", "P4", "P5"]
-
-[[trimestre.ephemeride]]
 title = "initiation au tennis"
-date = "mardi 23 janvier"
-note = "P2/P3/P5 Ath"
-godate = "2025-01-23"
+date = "lundi 20 janvier"
+note = "P3/P4/P5 Ath"
+godate = "2025-01-20"
 tag = ["sport"]
-class = ["P2", "P3", "P5"]
+class = ["P3", "P4", "P5"]
 site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "initiation au tennis"
-date = "mardi 30 janvier"
-note = "P1/P4/P6 Ath"
-godate = "2025-01-30"
+date = "vendredi 24 janvier"
+note = "P1 à P6 Maffle"
+godate = "2025-01-24"
 tag = ["sport"]
-class = ["P1", "P4", "P6"]
-site = ["ath"]
-
-[[trimestre.ephemeride]]
-title = "initiation au tennis"
-date = "mardi 02 février"
-note = "Maffle"
-godate = "2025-02-02"
-tag = ["sport"]
+class = ["P1", "P2", "P3", "P4", "P5", "P6"]
 site = ["maffle"]
 
 [[trimestre.ephemeride]]
-title = "tournoi de foot interclasse"
-date = "vendredi 23 février"
-note = "P1 à P6 Ath et Maffle"
-godate = "2025-02-23"
+title = "initiation au tennis"
+date = "mardi 28 janvier 2025"
+note = "Maffle"
+godate = "2025-01-28"
+class = ["P1", "P2", "P6"]
+tag = ["sport"]
+site = ["ath"]
+
+[[trimestre.ephemeride]]
+title = "tournoi de ping pong"
+date = "vendredi 07 février 2025"
+godate = "2025-02-07"
 tag = ["sport"]
 class = ["P1", "P2", "P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
-title = "Carnaval dans la ville"
-date = "vendredi 23 février 2025"
-note = "avec l'aide de l'association des parents"
-godate = "2025-02-23"
-tag = ["loisir"]
-
-[[trimestre.ephemeride]]
-title = "Congé de Carnaval/Détente"
-date = "du lundi 26 février au vendredi 08 mars 2025"
-godate = "2025-02-26"
-tag = ["vacances"]
+title = "souper raclette des P6"
+date = "samedi 08 février 2025"
+godate = "2025-02-08"
+tag = ["évenement"]
+class = ["P6"]
 
 [[trimestre.ephemeride]]
 title = "classe verte P2"
-date = "du lundi 11 mars au vendredi 15 mars 2025"
-godate = "2025-03-11"
+date = "du lundi 10 février au vendredi 14 février 2025"
+godate = "2025-02-10"
 tag = ["loisir"]
 class = ["P2"]
 
 [[trimestre.ephemeride]]
+title = "Carnaval dans la ville"
+date = "vendredi 21 février 2025"
+note = "avec l'aide de l'association des parents"
+godate = "2025-02-21"
+tag = ["loisir"]
+
+[[trimestre.ephemeride]]
+title = "Congé de Carnaval/Détente"
+date = "du lundi 24 février au vendredi 07 mars 2025"
+godate = "2025-02-24"
+tag = ["vacances"]
+
+[[trimestre.ephemeride]]
 title = "Cross"
-date = "mardi 19 mars 2025"
+date = "mecredi 19 mars 2025"
 note = "P1 à P6 Ath et Maffle"
 godate = "2025-03-19"
 tag = ["sport"]
@@ -273,179 +272,162 @@ class = ["P1", "P2", "P3", "P4", "P5", "P6"]
 
 [[trimestre.ephemeride]]
 title = "Messe et célébration de Saint-Joseph"
-date = "mardi 19 mars 2025"
+date = "mecredi 19 mars 2025"
 godate = "2025-03-19"
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "Bulletin 2 + Réunion individuelle"
-date = "du lundi 18 mars au vendredi 22 mars 2025"
-godate = "2025-03-18"
+date = "du lundi 17 mars au vendredi 21 mars 2025"
+godate = "2025-03-17"
 
 [[trimestre.ephemeride]]
 title = "photo individuelle et de classe Ath"
-date = "lundi 25 mars 2025"
-godate = "2025-03-25"
+date = ""
+godate = ""
 site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "photo individuelle et de classe Maffle"
-date = "mercredi 27 mars 2025"
-godate = "2025-03-27"
+date = ""
+godate = ""
 site = ["maffle"]
 
 [[trimestre.ephemeride]]
-title = "souper savoyard"
-date = "samedi 30 mars 2025"
-godate = "2025-03-30"
+title = "Fête scolaire"
+note  = "Ath"
+date = "samedi 12 avril 2025"
+godate = "2025-04-12"
 tag = ["évenement"]
+site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "lundi de Pâques"
-date = "lundi 01 avril 2025"
-godate = "2025-04-01"
+date = "lundi 21 avril 2025"
+godate = "2025-04-21"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
-title = "conférence pédagogique"
-date = "lundi 08 avril 2025"
-godate = "2025-04-08"
-tag = ["école"]
-
-[[trimestre.ephemeride]]
-title = "marche gourmande"
-date = "dimanche 21 avril 2025"
-godate = "2025-04-21"
-tag = ["loisir"]
-
-[[trimestre.ephemeride]]
 title = "journée sportive"
-date = "vendredi 26 avril 2025"
+date = "vendredi 25 avril 2025"
 note = "M1 à P6 Ath et Maffle"
-godate = "2025-04-26"
+godate = "2025-04-25"
 tag = ["sport"]
 
 [[trimestre.ephemeride]]
 title = "Congés de Pâques/Printemps"
-date = "du lundi 29 avril 2025 au vendredi 10 mai 2025"
-godate = "2025-04-29"
+date = "du lundi 28 avril 2025 au vendredi 09 mai 2025"
+godate = "2025-04-28"
 tag = ["vacances"]
 
 [[trimestre]]
 title = "3ème trimestre"
 
 [[trimestre.ephemeride]]
-title = "lundi de pentecôte"
-date = "lundi 20 mai 2025"
+title = "Fête scolaire"
+note  = "Maffle"
+date = "samedi 17 mai 2025"
+godate = "2025-05-17"
+tag = ["évenement"]
+site = ["maffle"]
+
+[[trimestre.ephemeride]]
+title = "initiation/perfectionnement au hockey"
+date = "mardi 20 mai 2025"
+note = "P3 à P6 Ath"
 godate = "2025-05-20"
+tag = ["sport"]
+site = ["ath"]
+class = ["P3", "P4", "P5", "P6"]
+
+[[trimestre.ephemeride]]
+title = "athlétisme"
+date = "lundi 26 mai 2025"
+godate = "2025-05-26"
+tag = ["sport"]
+
+[[trimestre.ephemeride]]
+title = "jeudi de l'ascension"
+date = "jeudi 29 mai 2025"
+godate = "2025-05-29"
 tag = ["vacances"]
 
 [[trimestre.ephemeride]]
-title = "initiation au hockey"
-date = "mardi 21 mai 2025"
-note = "P3 à P6 Ath"
-godate = "2025-05-21"
+title = "fin des activités extrascolaires"
+date = "vendredi 30 mai 2025"
+godate = "2025-05-30"
+
+[[trimestre.ephemeride]]
+title = "initiation/perfectionnement au golf"
+date = "mardi 03 juin 2025"
+godate = "2025-06-03"
 tag = ["sport"]
-site = ["ath"]
+
+[[trimestre.ephemeride]]
+title = "lundi de pentecôte"
+date = "lundi 09 juin 2025"
+godate = "2025-06-09"
+tag = ["vacances"]
+
+[[trimestre.ephemeride]]
+title = "initiation/perfectionnement au golf"
+date = "mardi 10 juin 2025"
+godate = "2025-06-10"
+tag = ["sport"]
 class = ["P3", "P4", "P5", "P6"]
+site = ["ath", "maffle"]
 
 [[trimestre.ephemeride]]
 title = "classe verte M3"
-date = "du mecredi 22 mai au vendredi 24 mai 2025"
-godate = "2025-05-22"
+date = "du mecredi 11 juin au vendredi 13 juin 2025"
+godate = "2025-06-11"
 tag = ["loisir"]
-class = ["P3"]
-
-[[trimestre.ephemeride]]
-title = "initiation au hockey"
-date = "vendredi 24 mai 2025"
-note = "P3 à P6 Maffle"
-godate = "2025-05-24"
-tag = ["sport"]
-site = ["maffle"]
-class = ["P3", "P4", "P5", "P6"]
-
-[[trimestre.ephemeride]]
-title = "fin des activités extrascolaires"
-date = "vendredi 31 mai 2025"
-godate = "2025-05-31"
-
-[[trimestre.ephemeride]]
-title = "Fête scolaire"
-note  = "Ath"
-date = "samedi 01 juin 2025"
-godate = "2025-06-01"
-tag = ["évenement"]
-site = ["ath"]
-
-[[trimestre.ephemeride]]
-title = "matinée athlétisme"
-note  = "P3 à P6 Ath et Maffle"
-date = "jeudi 06 juin 2025"
-godate = "2025-06-06"
-tag = ["sport"]
-class = ["P3", "P4", "P5", "P6"]
-
-[[trimestre.ephemeride]]
-title = "Fête scolaire"
-note  = "Maffle"
-date = "samedi 08 juin 2025"
-godate = "2025-06-08"
-site = ["maffle"]
-tag = ["évenement"]
+class = ["M3"]
 
 [[trimestre.ephemeride]]
 title = "Bulletins intermédiaire pour P2, p4, P6"
 note = "rdv sur convocation"
-date = "du lundi 17 juin au vendredi 21 juin 2025"
-godate = "2025-06-17"
-
-[[trimestre.ephemeride]]
-title = "initiation au golf"
-note  = "P3 à P6 Ath et Maffle"
-date = "mardi 18 juin 2025"
-godate = "2025-06-18"
-tag = ["sport"]
-class = ["P3", "P4", "P5", "P6"]
+date = "du lundi 16 juin au vendredi 20 juin 2025"
+godate = "2025-06-16"
 
 [[trimestre.ephemeride]]
 title = "fin des repas chaud"
-date = "vendredi 21 juin 2025"
-godate = "2025-06-21"
+date = "vendredi 20 juin 2025"
+godate = "2025-06-20"
 
 [[trimestre.ephemeride]]
 title = "épreuves certificatives interdiocésaines pour P2/P4"
-date = "du lundi 24 juin au vendredi 28 juin 2025"
-godate = "2025-06-24"
+date = "du lundi 23 juin au vendredi 27 juin 2025"
+godate = "2025-06-23"
 
 [[trimestre.ephemeride]]
 title = "Epreuves du CEB"
-date = "du lundi 24 juin au vendredi 28 juin 2025"
-godate = "2025-06-24"
+date = "du lundi 23 juin au vendredi 27 juin 2025"
+godate = "2025-06-23"
 
 [[trimestre.ephemeride]]
 title = "remise des dîplomes 3eme maternelles"
-date = "vendredi 28 juin 2025"
+date = "vendredi 27 juin 2025"
 note = "à partir de 18h"
-godate = "2025-06-28"
+godate = "2025-06-27"
 tag = ["évenement"]
 site = ["ath"]
 
 [[trimestre.ephemeride]]
 title = "Bulletin 3"
 note = "réunion individuelle sur rdv"
-date = "du lundi 01 juillet au vendredi 05 juillet 2025"
-godate = "2025-07-01"
+date = "du lundi 30 juin au vendredi 03 juillet 2025"
+godate = "2025-06-30"
 
 [[trimestre.ephemeride]]
 title = "Remise des CEB"
 note = "à 18h"
-date = "mecredi 03 juillet 2025"
-godate = "2025-07-03"
+date = "mecredi 02 juillet 2025"
+godate = "2025-07-02"
 tag = ["évenement"]
 
 [[trimestre.ephemeride]]
 title = "vacances d'été"
-date = "samedi 06 juillet 2025"
-godate = "2025-07-06"
+date = "samedi 05 juillet 2025"
+godate = "2025-07-05"
 tag = ["vacances"]
