--- a/content/infos/documents/list.toml
+++ b/content/infos/documents/list.toml
@@ -1,4 +1,10 @@
 [[document]]
+name = "Règlement d'ordre intérieur"
+summary = ""
+location = "docs/ROI.pdf"
+image = ""
+
+[[document]]
 name = "accord des parents"
 summary = ""
 location = "docs/ACCORD_DES_PARENTS.pdf"
