--- a/content/infos/documents/list.toml
+++ b/content/infos/documents/list.toml
@@ -2,7 +2,7 @@
 name = "Règlement d'ordre intérieur"
 summary = ""
 location = "docs/ROI.pdf"
-image = ""
+image = "roi.png"
 
 [[document]]
 name = "accord des parents"
@@ -51,16 +51,16 @@ image = "image.png"
 name = "Gratuité à l'école"
 summary = ""
 location = "docs/FREE_FWB.pdf"
-image = ""
+image = "freeschool.png"
 
 [[document]]
 name = "Gratuité Maternelles"
 summary = ""
 location = "docs/FREE_MAT.pdf"
-image = ""
+image = "freemat.png"
 
 [[document]]
 name = "Gratuité P1-P2"
 summary = ""
 location = "docs/FREE_PRIM.pdf"
-image = ""
+image = "freeprim.png"
